<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="105dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_margin="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="252dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_margin="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_admin_panel_settings_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="327dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#302596be"
        android:backgroundTint="@color/design_default_color_primary"
        android:elevation="30dp"
        android:text="Login"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="497dp" />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/registerNow"
        android:textColor="#172FB4"
        android:text="@string/don_t_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>